# rt

./: .gitignore  CMakeLists.txt  Makefile  README.md  author  test_main.c
SDL2/SDL2/: libSDL2-2.0.0.dylib
SDL2/SDL2/cmake/SDL2/: sdl2-config.cmake
SDL2/SDL2/pkgconfig/: sdl2.pc
SDL2/SDL2_image/: libSDL2_image-2.0.0.dylib
SDL2/SDL2_image/pkgconfig/: SDL2_image.pc
frameworks/SDL2_mixer.framework/Versions/A/Frameworks/Vorbis.framework/Versions/A/Headers/: codec.h
frameworks/SDL2_ttf.framework/Versions/A/Frameworks/FreeType.framework/Versions/A/Headers/freetype/: ftbbox.h  ftbzip2.h  ftcache.h  ftcffdrv.h  ftcid.h  ftimage.h  ftlzw.h  ftmodapi.h  ftotval.h  ftoutln.h  ftsynth.h  ftwinfnt.h
incl/: rt.h  rt_control.h  rt_effect.h  rt_interface.h  rt_read_save.h  rt_start.h  rt_structures.h  rt_textures.h  rt_trace.h
libft/: Makefile  author  ft_arrdel.c  ft_arrfill.c  ft_atoi.c  ft_bzero.c  ft_find_eol.c  ft_intlen.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelmy.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_ltrcnt.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_power.c  ft_put_errno.c  ft_put_error.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  (+33 more)
mlx-linux/: Makefile
mlx-linux/test/: a.out  main.c
scenes/: Cosmos.rt  Cube.rt  Desert.rt  Scene01.rt  Scene01_g.rt  Scene01_z.rt  Scene02.rt  Scene03.rt  Scene04.rt  boloids.rt  cube.rt  face.rt  lonely_island.rt  lonely_paradise.rt  refraction.rt  test.rt  tex_pat1_Cosmos.rt  tex_pat2_lonely_paradise.rt  tex_pat3_The_watchers.rt
src/src_control/: rt_control_camera.c  rt_control_effect.c  rt_control_hooks.c  rt_control_interface.c  rt_control_keyboard_1.c  rt_control_keyboard_2.c  rt_control_light.c  rt_control_main.c  rt_control_material.c  rt_control_object.c  rt_control_reset.c
src/src_effect/: rt_effect_antialias_1.c  rt_effect_antialias_2.c  rt_effect_color_1.c  rt_effect_color_2.c  rt_effect_color_3.c  rt_effect_main.c  rt_effect_other.c  rt_effect_pixelation.c  rt_motion_blur.c
src/src_interface/: rt_interface_bottom.c  rt_interface_camera.c  rt_interface_effect.c  rt_interface_help_1.c  rt_interface_help_2.c  rt_interface_light.c  rt_interface_main.c  rt_interface_material_1.c  rt_interface_material_2.c  rt_interface_object.c  rt_interface_other.c  rt_interface_render.c  rt_interface_scene_1.c  rt_interface_scene_2.c
src/src_read_save/: rt_read_scene_1.c  rt_read_scene_2.c  rt_read_scene_3.c  rt_read_scene_4.c  rt_read_scene_5.c  rt_read_scene_6.c  rt_read_scene_7.c  rt_read_scene_8.c  rt_read_scene_9.c  rt_save_scene_1.c  rt_save_scene_2.c  rt_save_scene_3.c  rt_save_screenshot.c
src/src_start/: rt_main.c  rt_prepare_buffers.c  rt_start_draw.c  rt_start_mlx_init.c  rt_start_scene_init.c
src/src_texture/: rt_texture_noise.c  texture_main.c  texture_noises.c  texture_procedural.c  texture_utils1.c  texture_utils2.c  uv_mapping1.c  uv_mapping2.c
src/src_trace/: rt_trace_core.c  rt_trace_intersect_1.c  rt_trace_intersect_2.c  rt_trace_intersect_3.c  rt_trace_light_1.c  rt_trace_light_2.c  rt_trace_main.c  rt_trace_normals_1.c  rt_trace_normals_2.c  rt_trace_pthreads.c  rt_trace_vector_1.c  rt_trace_vector_2.c
src_control/: rt_control_camera.c  rt_control_effect.c  rt_control_hooks.c  rt_control_interface.c  rt_control_keyboard_1.c  rt_control_keyboard_2.c  rt_control_light.c  rt_control_main.c  rt_control_material.c  rt_control_object.c  rt_control_reset.c
src_effect/: rt_effect_antialias_1.c  rt_effect_antialias_2.c  rt_effect_color_1.c  rt_effect_color_2.c  rt_effect_color_3.c  rt_effect_main.c  rt_effect_other.c  rt_effect_pixelation.c  rt_motion_blur.c
src_interface/: rt_interface_bottom.c  rt_interface_camera.c  rt_interface_effect.c  rt_interface_help_1.c  rt_interface_help_2.c  rt_interface_light.c  rt_interface_main.c  rt_interface_material.c  rt_interface_material_1.c  rt_interface_material_2.c  rt_interface_object.c  rt_interface_other.c  rt_interface_render.c  rt_interface_scene.c  rt_interface_scene_1.c  rt_interface_scene_2.c
src_read_save/: rt_read_scene_1.c  rt_read_scene_2.c  rt_read_scene_3.c  rt_read_scene_4.c  rt_read_scene_5.c  rt_read_scene_6.c  rt_read_scene_7.c  rt_read_scene_8.c  rt_read_scene_8_texture.c  rt_read_scene_9.c  rt_save_scene_1.c  rt_save_scene_2.c  rt_save_scene_3.c  rt_save_screenshot.c
src_start/: rt_clean_pix_buffer.c  rt_main.c  rt_prepare_buffers.c  rt_start_draw.c  rt_start_mlx_init.c  rt_start_scene_init.c
src_texture/: rt_texture_noise.c  texture_main.c  texture_noises.c  texture_perline_noise.c  texture_procedural.c  texture_utils.c  texture_utils1.c  texture_utils2.c  uv_mapping.c  uv_mapping1.c  uv_mapping2.c
src_trace/: rt_trace_added.c  rt_trace_core.c  rt_trace_intersect_1.c  rt_trace_intersect_2.c  rt_trace_intersect_3.c  rt_trace_light.c  rt_trace_light_1.c  rt_trace_light_2.c  rt_trace_main.c  rt_trace_normals.c  rt_trace_normals_1.c  rt_trace_normals_2.c  rt_trace_pthreads.c  rt_trace_vector_1.c  rt_trace_vector_2.c
